@@ -1,6 +1,7 @@
 ????-??-??: 2.2.2
 	 fix: checkgauge 'insist'
 	 fix: no partial path exlusion tests
+	 fix: write pid of forked process in pidfile
 
 2017-01-05: 2.2.1
 	enhancement: now always using filter lists with rysnc
